Fixed marginBottom of ListFormPages on mobile

--- a/src/components/pages/templates/ListFormPage.module.css
+++ b/src/components/pages/templates/ListFormPage.module.css
@@ -9,15 +9,6 @@
   overflow: hidden;
 }
 
-.PageContent {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  overflow: scroll;
-  margin: 0 -28px -18px;
-  padding: 0 28px 28px;
-}
-
 /* md and up */
 @media screen and (min-width: 768px) {
   .ListTitle {
